--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SemanticAutocomplete demo</title>
-    <script type="module" crossorigin src="./public/index-CemtSrBV.js"></script>
+    <script type="module" crossorigin src="./public/index-_s8slMTD.js"></script>
   </head>
   <body>
     <div id="root"></div>
